feat: implement service discovery